<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_main"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/box_one_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            android:layout_marginTop="@dimen/margin_wide"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/margin_wide"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_wide"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/box_two_text"
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_half"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three_text"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.428"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four_text"
            style="@style/WhiteBox" app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.459"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five_text"
            style="@style/WhiteBox" app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/how_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_text" android:fontFamily="@font/roboto"
            android:textSize="24sp" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/info_text"/>
    <TextView
            android:text="@string/app_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/info_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/label_text" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/str_btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/yellow_btn"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/str_btn_ylw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_btn"
            app:layout_constraintStart_toEndOf="@+id/red_btn"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/green_btn"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/info_text" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/str_btn_grn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_btn"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn"
            app:layout_constraintStart_toEndOf="@+id/yellow_btn" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>